# yoyoman01_robot

./: LICENSE  README.md
sot-yoyoman01/: CMakeLists.txt  README.md
sot-yoyoman01/doc/: Doxyfile.extra.in
sot-yoyoman01/src/: CMakeLists.txt  dynamic-yoyoman01.cpp  dynamic-yoyoman01.hh  sot-yoyoman-controller.cpp  sot-yoyoman-controller.hh  sot-yoyoman01-controller.cpp  sot-yoyoman01-controller.hh  sot-yoyoman01-device.cpp  sot-yoyoman01-device.hh
sot-yoyoman01/src/dynamic_graph/sot/yoyoman01/: __init__.py  prologue.py  robot.py  robot_bis.py  yoyoman01.py
tiago_tutorials/demo_motions/: CMakeLists.txt
yoyoman01_control/: CMakeLists.txt  package.xml
yoyoman01_control/config/: yoyoman01.yaml  yoyoman01_control.yaml
yoyoman01_control/launch/: yoyoman01_control.launch  yoyoman01_rqt.launch  yoyoman01_rqt.perspective
yoyoman01_description/: CMakeLists.txt  package.xml
yoyoman01_description/launch/: yoyoman01.rviz  yoyoman01_rviz.launch
yoyoman01_description/meshes/: BRAS.stl  BUSTE.stl  COU.stl  HANCHE_D.stl  HANCHE_G.stl  JAMBE_D.stl  JAMBE_G.stl  TETE.stl  barre600.stl
yoyoman01_description/urdf/: yoyoman01.xacro
yoyoman01_gazebo/: CMakeLists.txt  package.xml
yoyoman01_gazebo/launch/: yoyoman01_world.launch
yoyoman01_hw/: CMakeLists.txt  CMakeLists.txt~  codeurs.txt  package.xml  ros_hardware.cpp  talker.cpp  variables.h
yoyoman01_hw/yoyoman01_sot_description/: CMakeLists.txt
yoyoman01_hw/yoyoman01_sot_description/config/: yoyoman_full_pal_hardware_gazebo_config.yaml
yoyoman01_hw/yoyoman01_sot_description/urdf/: yoyoman01.urdf  yoyoman01_effort.xacro
yoyoman01_hw/yoyoman_metapkg_ros_control_sot/: README.md
yoyoman01_hw/yoyoman_metapkg_ros_control_sot/roscontrol_sot_yoyoman/: package.xml
yoyoman01_hw/yoyoman_metapkg_ros_control_sot/roscontrol_sot_yoyoman/launch/: display_sot.launch
yoyoman01_hw/yoyoman_metapkg_ros_control_sot/roscontrol_sot_yoyoman/scripts/: republish
yoyoman01_hw/yoyoman_metapkg_ros_control_sot/sot_yoyoman01_bringup/: README.md
yoyoman01_hw/yoyoman_metapkg_ros_control_sot/sot_yoyoman01_bringup/launch/: geometric_simu_context.launch
yoyoman01_moveit_config/: CMakeLists.txt  package.xml
yoyoman01_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot.srdf
yoyoman01_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
yoyoman01_sot_description/: package.xml
yoyoman01_sot_description/config/: pid_gazebo.yaml
yoyoman01_sot_description/launch/: yoyoman01_world.launch
yoyoman01_sot_description/meshes/: HANCHE_D.stl
yoyoman01_sot_description/urdf/: barriere.xacro  yoyoman01.urdf  yoyoman01_effort.xacro
yoyoman01_traject/: CMakeLists.txt  package.xml
yoyoman01_traject/config/: approach_planner.yaml  controller_list.yaml  effort_controllers.yaml  joint_trajectory_controllers.yaml  kinematics_kdl.yaml  kinematics_trac_ik.yaml  ompl_planning.yaml  yoyoman01.srdf.xacro  yoyoman01_joint_state.yaml  yoyoman01_motions.yaml  yoyoman01_motions2.yaml  yoyoman01_motions3.yaml  yoyoman01_motions4.yaml  yoyoman01_motions41.yaml  yoyoman01_motions42.yaml
yoyoman01_traject/launch/: barriere.launch  default_controllers.launch  default_controllers2.launch  imu.launch  launch_all.launch  ompl_planning.launch  play_motion.launch  robot_pose_ekf.launch  set_state.launch  trajectory_execution.xml.launch  world.launch  yoyoman01_control2.launch  yoyoman01_gazebo.launch  yoyoman01_real_robot_play_motion.launch  yoyoman01_simulation.launch
yoyoman01_traject/launch/launch moins pertinent/: moveit.rviz  moveit_rviz.launch  yoyoman01_gazebo2.launch
yoyoman01_traject/scripts/: axclient_yoyoman01.py  bringup_controller.py  bringup_imu.py  bringup_play_motion.py  bringup_yoyoman01.py  data_cycle.py  data_cycle1.py  disable_collisions.py  home.py  listener.py  movement.py  movement_real.py  pause_gazebo.py  position_moteur.py  position_moteur1.py  position_moteur2.py  position_moteur3.py  position_moteur4.py  position_moteur41.py  position_moteur42.py  roslaunch  rospy  se3  set_state_model.py  test.py  testmoveit.py  unpause_gazebo.cpp  unpause_gazebo.py  yoyoman01_motions42.yaml
yoyoman01_traject/src/: set_gazebo_physic.cpp  set_state.cpp
yoyoman01_traject/urdf/: barriere.xacro  imu.xacro  yoyoman01.xacro
yoyoman_metapkg_ros_control_sot/roscontrol_sot_yoyoman/: CMakeLists.txt
yoyoman_metapkg_ros_control_sot/roscontrol_sot_yoyoman/config/: sot_yoyoman_controller.yaml  sot_yoyoman_params.yaml  sot_yoyoman_params_effort.yaml  sot_yoyoman_params_gazebo.yaml  sot_yoyoman_params_gazebo_effort.yaml
yoyoman_metapkg_ros_control_sot/roscontrol_sot_yoyoman/launch/: sot_yoyoman_controller.launch  sot_yoyoman_controller_effort.launch  sot_yoyoman_controller_gazebo.launch  sot_yoyoman_controller_gazebo_effort.launch
yoyoman_metapkg_ros_control_sot/sot_yoyoman01_bringup/: CMakeLists.txt  package.xml
yoyoman_metapkg_ros_control_sot/sot_yoyoman01_bringup/launch/: geometric_simu.launch  geometric_simu_pyrene.launch
yoyoman_metapkg_ros_control_sot/sot_yoyoman01_bringup/sot/: yoyoman01.yaml
yoyoman_metapkg_ros_control_sot/yoyoman_metapkg_ros_control_sot/: CMakeLists.txt  package.xml
