<?xml version="1.0"?>
<package>
  <name>yoyoman01_control</name>
  <version>0.0.0</version>
  <description>The yoyoman01_control package</description>

  <maintainer email="fcaminade@laas.fr">Florenc Caminade</maintainer>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>


  <license>BSD</license>

  <url type="website">http://github.com/Gepetto/yoyoman01_robot</url> 

  <author email="fcaminade@laas.fr">Florent Caminade</author>
  <author email="fcaminade@laas.fr">Olivier Stasse</author>



  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>


  <export>
  </export>
  
</package>
