<?xml version="1.0"?>
<package>
  <name>yoyoman01_description</name>
  <version>0.0.0</version>
  <description>The yoyoman01_description package</description>

  <maintainer email="fcaminade@laas.fr">Florenc Caminade</maintainer>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/Gepetto/yoyoman01_robot</url> 


  <author email="fcaminade@laas.fr">Florent Caminade</author>
  <author email="fcaminade@laas.fr">Olivier Stasse</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>


  <export>
  </export>
  
</package>
