INCLUDE(../cmake/python.cmake)
#set(Python_ADDITIONAL_VERSIONS 2.7)
FINDPYTHON()
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

FUNCTION(COMPILE_PLUGIN NAME SOURCES ENTITIES)
  ADD_LIBRARY(${NAME} SHARED ${SOURCES})
  SET_TARGET_PROPERTIES(${lib} PROPERTIES
    PREFIX ""
    SOVERSION ${PROJECT_VERSION})

  PKG_CONFIG_USE_DEPENDENCY(${NAME} dynamic-graph)
  PKG_CONFIG_USE_DEPENDENCY(${NAME} sot-core)
  PKG_CONFIG_USE_DEPENDENCY(${NAME} eigen3)
  PKG_CONFIG_USE_DEPENDENCY(${NAME} pinocchio)

  INSTALL(TARGETS ${NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/plugin)
  STRING(REPLACE - _ PYTHON_LIBRARY_NAME ${NAME})
  SET(NEW_ENTITY_CLASS ${ENTITIES})
  DYNAMIC_GRAPH_PYTHON_MODULE("sot/yoyoman01/${PYTHON_LIBRARY_NAME}"
    ${NAME}
    sot-yoyoman01-${PYTHON_LIBRARY_NAME}-wrap
    )
ENDFUNCTION()



# Compile plug-ins.
#COMPILE_PLUGIN(dynamic-yoyoman01 dynamic-yoyoman01.cpp DynamicYoyoman01)


## 
##CONFIG_FILES(dynamic_graph/sot/romeo/robot.py)

# Install Python files.
SET(PYTHON_MODULE_DIR
${CMAKE_CURRENT_SOURCE_DIR}/dynamic_graph/sot/yoyoman01)
SET(PYTHON_MODULE_BUILD_DIR
${CMAKE_CURRENT_BINARY_DIR}/dynamic_graph/sot/yoyoman01)

SET(PYTHON_MODULE dynamic_graph/sot/yoyoman01)
PYTHON_INSTALL_ON_SITE("${PYTHON_MODULE}" "__init__.py" )
PYTHON_INSTALL_ON_SITE("${PYTHON_MODULE}" "robot.py" "${PYTHON_SITELIB}")
PYTHON_INSTALL_ON_SITE("${PYTHON_MODULE}" "yoyoman01.py" )
PYTHON_INSTALL_ON_SITE("${PYTHON_MODULE}" "prologue.py")

MACRO(build_yoyoman01_device)
  SET(DEVICE_NAME sot-yoyoman01-device)
  ADD_LIBRARY(${DEVICE_NAME}
    SHARED
    #sot-yoyoman01-controller.cpp
    sot-yoyoman01-device.cpp
  )

  # Link the dynamic library containing the SoT with its dependencies.
  PKG_CONFIG_USE_DEPENDENCY(${DEVICE_NAME} "dynamic-graph")
  PKG_CONFIG_USE_DEPENDENCY(${DEVICE_NAME} "dynamic-graph-python")
  PKG_CONFIG_USE_DEPENDENCY(${DEVICE_NAME} "sot-core")
  PKG_CONFIG_USE_DEPENDENCY(${DEVICE_NAME} "pinocchio")
  PKG_CONFIG_USE_DEPENDENCY(${DEVICE_NAME} "dynamic_graph_bridge")


  #ROSPACK_USE_DEPENDENCY(${DEVICE_NAME} "dynamic_graph_bridge")

  IF(UNIX AND NOT APPLE)
    TARGET_LINK_LIBRARIES(${DEVICE_NAME} ${Boost_LIBRARIES})
  ENDIF(UNIX AND NOT APPLE)

  INSTALL(TARGETS ${DEVICE_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})

  # build python submodule
  STRING(REPLACE - _ PYTHON_LIBRARY_NAME ${DEVICE_NAME})
  SET(NEW_ENTITY_CLASS ${ENTITIES})
  DYNAMIC_GRAPH_PYTHON_MODULE("sot/yoyoman01/${PYTHON_LIBRARY_NAME}"
   ${DEVICE_NAME}
  sot-yoyoman01-${PYTHON_LIBRARY_NAME}-wrap
   )
ENDMACRO()
build_yoyoman01_device()

#build yoyoman01 controller

SET(CONTROLLER_NAME sot-yoyoman01-controller)
ADD_LIBRARY(${CONTROLLER_NAME}
  SHARED
  sot-yoyoman-controller.cpp
  sot-yoyoman01-controller.cpp
)

# Link the dynamic library containing the SoT with its dependencies.
PKG_CONFIG_USE_DEPENDENCY(${CONTROLLER_NAME} "dynamic-graph")
PKG_CONFIG_USE_DEPENDENCY(${CONTROLLER_NAME} "dynamic-graph-python")
PKG_CONFIG_USE_DEPENDENCY(${CONTROLLER_NAME} "sot-core")

PKG_CONFIG_USE_DEPENDENCY(${CONTROLLER_NAME} "dynamic_graph_bridge")

ADD_DEPENDENCIES(${CONTROLLER_NAME} "sot-yoyoman01-device")
TARGET_LINK_LIBRARIES(${CONTROLLER_NAME} "sot-yoyoman01-device")
TARGET_LINK_LIBRARIES(${CONTROLLER_NAME} "ros_bridge")
TARGET_LINK_LIBRARIES(${CONTROLLER_NAME} "ros_interpreter")
 
IF(UNIX AND NOT APPLE)
  TARGET_LINK_LIBRARIES(${CONTROLLER_NAME} ${Boost_LIBRARIES})
ENDIF(UNIX AND NOT APPLE)

INSTALL(TARGETS ${CONTROLLER_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})


