<package>
  <name>sot_yoyoman01_bringup</name>
  <version>0.0.9</version>
  <description>ROS package for Stack of Tasks on Pyrene</description>

  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>

  <license>BSD</license>

  <url type="website">http://redmine.laas.fr/</url>
  <author>Olivier Stasse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>yoyoman_description</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>yoyoman_description</run_depend>

  <export>
  </export>
</package>
